converted to java 8